Fixed nav menu dimentions on smaller screens.  Fixed lots of null warnings.  Tried to add some error supression but failed so am trying to replace refresh functionality instead

--- a/KudosWiki/Shared/MainLayout.razor.css
+++ b/KudosWiki/Shared/MainLayout.razor.css
@@ -11,6 +11,8 @@ main {
 
 .sidebar {
     background-image: linear-gradient(180deg, #0d385b 10%, #212529 50%);
+    max-height: 100vh;
+    width: 250px;
 }
 
 .topBlock {
@@ -64,10 +66,6 @@ main {
 @media (max-width: 380px) {
     .logindispSmall {
         /*display: none;*/
-    }
-
-    .sidebar {
-        height: 100vh;
     }
 }
 
@@ -154,8 +152,6 @@ main {
     }
 
     .sidebar {
-        /*width: 250px;*/
-        max-height: 100vh;
         position: sticky;
         top: 0;
     }
