--- a/KudosWiki/Shared/NavMenu.razor.css
+++ b/KudosWiki/Shared/NavMenu.razor.css
@@ -10,6 +10,7 @@
 .nav-container {
     position: relative;
     height: 100%;
+    width: 100%;
     /*overflow: hidden;*/
 }
 
@@ -183,6 +184,7 @@ navlink {
     }
 
 .nav-item ::deep a.active {
+    font-size: larger;
     background-color: rgba(255,255,255,0.25);
     color: white;
 }
